# housing-completions-vs-price-per-square-metre-by-local-authority

./: README.md  main.ipynb  pyproject.toml
data/: completions.csv  median_price_paid.csv  population.csv  property_floorspace.csv
