[project]
name = "housing-completions-vs-price-per-square-metre-by-local-authority"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jamie Rumbelow", email = "jamie@jamierumbelow.net" }
]
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/housing_completions_vs_price_per_square_metre_by_local_authority"]
